--- a/Portfolio_Site/css/main_page.css
+++ b/Portfolio_Site/css/main_page.css
@@ -442,7 +442,9 @@ button:active{
 .pf_img2{
     background: url(../img/pf_2.png) no-repeat center center /cover;
 }
-
+.pf_img3{
+    background: url(../img/pf_3.png) no-repeat center center /cover;
+}
 
 
 
